--- a/app/src/main/res/layout/fgt_personal.xml
+++ b/app/src/main/res/layout/fgt_personal.xml
@@ -1,89 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/head_img"
-        android:layout_gravity="center_horizontal"
-        android:src="@mipmap/ic_launcher"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/icon_personal_bg"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/head_img"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:src="@mipmap/ic_launcher" />
+    </LinearLayout>
+
+
     <TextView
         android:id="@+id/personal_info_tv"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawableEnd="@mipmap/icon_turn_right"
         android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/home_select"
-        android:drawableEnd="@mipmap/home_unselect"
+        android:drawableStart="@mipmap/icon_personal_info"
         android:gravity="center_vertical"
+        android:paddingBottom="5dp"
+        android:paddingEnd="15dp"
+        android:paddingStart="15dp"
+        android:paddingTop="5dp"
         android:text="@string/personal_info"
-        android:textSize="12sp"
-        android:textColor="@color/txt_black" />
+        android:textColor="@color/txt_black"
+        android:textSize="12sp" />
+
     <TextView
         android:id="@+id/mine_team_tv"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:drawableEnd="@mipmap/icon_turn_right"
         android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/home_select"
-        android:drawableEnd="@mipmap/home_unselect"
+        android:drawableStart="@mipmap/icon_mine_team"
         android:gravity="center_vertical"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
         android:text="@string/mine_team"
-        android:textSize="12sp"
-        android:textColor="@color/txt_black" />
+        android:textColor="@color/txt_black"
+        android:textSize="12sp" />
+
+
     <TextView
-        android:id="@+id/wallet_tv"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:id="@+id/mine_wallet_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:drawableEnd="@mipmap/icon_turn_right"
         android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/home_select"
-        android:drawableEnd="@mipmap/home_unselect"
+        android:drawableStart="@mipmap/icon_mine_wallet"
         android:gravity="center_vertical"
-        android:text="@string/wallet"
-        android:textSize="12sp"
-        android:textColor="@color/txt_black" />
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:text="@string/mine_wallet"
+        android:textColor="@color/txt_black"
+        android:textSize="12sp" />
+
     <TextView
         android:id="@+id/put_forward_tv"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:drawableEnd="@mipmap/icon_turn_right"
         android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/home_select"
-        android:drawableEnd="@mipmap/home_unselect"
+        android:drawableStart="@mipmap/icon_put_forward"
         android:gravity="center_vertical"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
         android:text="@string/put_forward"
-        android:textSize="12sp"
-        android:textColor="@color/txt_black" />
+        android:textColor="@color/txt_black"
+        android:textSize="12sp" />
+
     <TextView
         android:id="@+id/change_password_tv"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:drawableEnd="@mipmap/icon_turn_right"
         android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/home_select"
-        android:drawableEnd="@mipmap/home_unselect"
+        android:drawableStart="@mipmap/icon_change_password"
         android:gravity="center_vertical"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
         android:text="@string/change_password"
-        android:textSize="12sp"
-        android:textColor="@color/txt_black" />
-    <include layout="@layout/button_layout"/>
+        android:textColor="@color/txt_black"
+        android:textSize="12sp" />
+
+    <include layout="@layout/button_layout" />
 </LinearLayout>
