--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -13,7 +13,8 @@
         android:src="@mipmap/icon_be_back_white"
         android:scaleType="centerInside"
         android:padding="8dp"
-        android:visibility="gone"
+        android:layout_centerVertical="true"
+        android:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
