--- a/app/src/main/res/layout/button_layout.xml
+++ b/app/src/main/res/layout/button_layout.xml
@@ -2,6 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/commit_tv"
+    android:onClick="onCommit"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="15dp"
