--- a/app/src/main/res/layout/fgt_personal.xml
+++ b/app/src/main/res/layout/fgt_personal.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -18,87 +19,234 @@
             android:src="@mipmap/ic_launcher" />
     </LinearLayout>
 
-
-    <TextView
-        android:id="@+id/personal_info_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableEnd="@mipmap/icon_turn_right"
-        android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/icon_personal_info"
-        android:gravity="center_vertical"
-        android:paddingBottom="5dp"
-        android:paddingEnd="15dp"
-        android:paddingStart="15dp"
-        android:paddingTop="5dp"
-        android:text="@string/personal_info"
-        android:textColor="@color/txt_black"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/mine_team_tv"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
-        android:drawableEnd="@mipmap/icon_turn_right"
-        android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/icon_mine_team"
-        android:gravity="center_vertical"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:text="@string/mine_team"
-        android:textColor="@color/txt_black"
-        android:textSize="12sp" />
+        android:padding="8dp">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/mine_wallet_tv"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/personal_totalRevenue_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/bar_color"
+                    android:textSize="20sp"
+                    tools:text="560" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:text="元"
+                    android:textColor="@color/bar_color" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="总收入" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/personal_todayRevenue_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/bar_color"
+                    android:textSize="20sp"
+                    tools:text="560" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:text="元"
+                    android:textColor="@color/bar_color" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="今日收入" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/personal_withdraw_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/bar_color"
+                    android:textSize="20sp"
+                    tools:text="560" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:text="元"
+                    android:textColor="@color/bar_color" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="已提现" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
-        android:drawableEnd="@mipmap/icon_turn_right"
-        android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/icon_mine_wallet"
-        android:gravity="center_vertical"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:text="@string/mine_wallet"
-        android:textColor="@color/txt_black"
-        android:textSize="12sp" />
+        android:layout_marginTop="5dp"
+        android:background="@drawable/edit_shape"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-    <TextView
-        android:id="@+id/put_forward_tv"
+        <TextView
+            android:id="@+id/personal_info_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@mipmap/icon_turn_right"
+            android:drawablePadding="5dp"
+            android:drawableStart="@mipmap/icon_personal_info"
+            android:gravity="center_vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:text="@string/personal_info"
+            android:textColor="@color/txt_black"
+            android:textSize="12sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/toast_stroke_gray" />
+
+        <TextView
+            android:id="@+id/mine_team_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@mipmap/icon_turn_right"
+            android:drawablePadding="5dp"
+            android:drawableStart="@mipmap/icon_mine_team"
+            android:gravity="center_vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:text="@string/mine_team"
+            android:textColor="@color/txt_black"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
-        android:drawableEnd="@mipmap/icon_turn_right"
-        android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/icon_put_forward"
-        android:gravity="center_vertical"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:text="@string/put_forward"
-        android:textColor="@color/txt_black"
-        android:textSize="12sp" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_shape"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-    <TextView
-        android:id="@+id/change_password_tv"
+        <TextView
+            android:id="@+id/mine_wallet_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@mipmap/icon_turn_right"
+            android:drawablePadding="5dp"
+            android:drawableStart="@mipmap/icon_mine_wallet"
+            android:gravity="center_vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:text="@string/mine_wallet"
+            android:textColor="@color/txt_black"
+            android:textSize="12sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/toast_stroke_gray" />
+
+        <TextView
+            android:id="@+id/put_forward_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@mipmap/icon_turn_right"
+            android:drawablePadding="5dp"
+            android:drawableStart="@mipmap/icon_put_forward"
+            android:gravity="center_vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:text="@string/put_forward"
+            android:textColor="@color/txt_black"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
-        android:drawableEnd="@mipmap/icon_turn_right"
-        android:drawablePadding="5dp"
-        android:drawableStart="@mipmap/icon_change_password"
-        android:gravity="center_vertical"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:text="@string/change_password"
-        android:textColor="@color/txt_black"
-        android:textSize="12sp" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_shape"
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/change_password_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@mipmap/icon_turn_right"
+            android:drawablePadding="5dp"
+            android:drawableStart="@mipmap/icon_change_password"
+            android:gravity="center_vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:text="@string/change_password"
+            android:textColor="@color/txt_black"
+            android:textSize="12sp" />
+    </LinearLayout>
 
     <include layout="@layout/button_layout" />
 </LinearLayout>
