微帮帮布局搭建

--- a/app/src/main/res/layout/fgt_personal.xml
+++ b/app/src/main/res/layout/fgt_personal.xml
@@ -57,6 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:textSize="12sp"
                 android:text="总收入" />
         </LinearLayout>
 
@@ -92,6 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:textSize="12sp"
                 android:text="今日收入" />
         </LinearLayout>
 
@@ -127,6 +129,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:textSize="12sp"
                 android:text="已提现" />
         </LinearLayout>
     </RelativeLayout>
@@ -152,7 +155,6 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:text="@string/personal_info"
-            android:textColor="@color/txt_black"
             android:textSize="12sp" />
 
         <View
@@ -173,7 +175,6 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:text="@string/mine_team"
-            android:textColor="@color/txt_black"
             android:textSize="12sp" />
     </LinearLayout>
 
@@ -198,7 +199,6 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:text="@string/mine_wallet"
-            android:textColor="@color/txt_black"
             android:textSize="12sp" />
 
         <View
@@ -219,7 +219,6 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:text="@string/put_forward"
-            android:textColor="@color/txt_black"
             android:textSize="12sp" />
     </LinearLayout>
 
@@ -244,7 +243,6 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:text="@string/change_password"
-            android:textColor="@color/txt_black"
             android:textSize="12sp" />
     </LinearLayout>
 
