--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -1,49 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginEnd="15dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginTop="15dp"
     android:background="@drawable/edit_shape"
     android:elevation="3dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
     android:gravity="center_vertical"
-    android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp"
-    android:layout_marginTop="15dp">
+    android:orientation="horizontal"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
     <ImageView
-        android:layout_marginStart="10dp"
-        android:src="@mipmap/icon_task"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:src="@mipmap/icon_task" />
+
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="落砂机奶茶"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textColor="@color/txt_black" />
+
         <TextView
-            android:text="落砂机奶茶落砂机奶茶落砂机奶茶落砂机奶茶"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="落砂机奶茶落砂机奶茶落砂机奶茶落砂机奶茶"
+            android:textSize="12sp" />
 
     </LinearLayout>
+
     <TextView
-        android:textColor="@color/white"
-        android:text="查 看"
-        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:background="@mipmap/icon_button_bg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:gravity="center"
+        android:text="查 看"
+        android:textColor="@color/white" />
 
 </LinearLayout>
