微帮帮布局搭建

--- a/app/src/main/res/layout/ranking_list.xml
+++ b/app/src/main/res/layout/ranking_list.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/already_used"
+                android:text="@string/daily_rankings"
                 android:textColor="@color/white"
                 android:textSize="12sp" />
         </LinearLayout>
@@ -44,16 +44,60 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/completed"
+                android:text="@string/universal_leaderboard"
                 android:textColor="@color/white"
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
+    <TextView
+        android:text="@string/rank_tips"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textSize="12sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:elevation="3dp"
+        android:background="@drawable/edit_shape"
+        android:layout_width="match_parent"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="@string/ranking"
+            android:textSize="12sp"
+            android:gravity="center"
+            android:textColor="@color/txt_black"
+            android:layout_width="0dp"
+            android:textStyle="bold"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:text="@string/ranking_name"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/txt_black"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:text="@string/total_income"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/txt_black"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_marginTop="10dp"
-        tools:listitem="@layout/task_item"
+        tools:listitem="@layout/ranking_item"
         tools:itemCount="5"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
